[package]
name = "ghetto-lock"
version = "0.1.0"
authors = ["Rohit Kumar <letmutx@gmail.com>"]
description = "Memcache backed ghetto lock implementation"
repository = "https://github.com/letmutx/ghetto-lock-rs.git"
license = "MIT"
readme = "README.md"
keywords = ["memcache", "ghetto", "locking", "distributed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.13.1"
log = "0.4.8"
