[package]
name = "macgyver-lock"
version = "0.2.0"
authors = ["Rohit Kumar <letmutx@gmail.com>"]
description = "Memcache backed lock implementation"
repository = "https://github.com/letmutx/macgyver-lock-rs.git"
license = "MIT"
readme = "README.md"
keywords = ["memcache", "ghetto", "macgyver", "locking", "distributed"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memcache = "0.14.0"
log = "0.4.8"
